--- a/django_uwsgi.ini
+++ b/django_uwsgi.ini
@@ -1,12 +1,12 @@
 # mysite_uwsgi.ini file
 [uwsgi]
 
-socket = 127.0.0.1:8000
+http = 127.0.0.1:8000
 # Django-related settings
 # the django project directory (full path)
 chdir           = /home/jack/PycharmProjects/Shadowsocks_Website/
 # Django's wsgi file
-module          = hello.wsgi
+module          = django_wsgi
 
 # process-related settings
 # master
